--- a/p/ro01/index.html
+++ b/p/ro01/index.html
@@ -440,6 +440,8 @@
         
         crossorigin="anonymous"
         async
+        data-origin="https://persuaderon.github.io"
+        data-url="https://persuaderon.github.io"
         >
 </script>
 
