修复评论的跳转问题？

--- a/p/test-chinese/index.html
+++ b/p/test-chinese/index.html
@@ -4,7 +4,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="这是一个副标题">
 <title>Chinese Test</title>
 
-<link rel='canonical' href='http://localhost:1313/p/test-chinese/'>
+<link rel='canonical' https://persuaderon.github.io//p/test-chinese/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="Chinese Test">
 <meta property='og:description' content="这是一个副标题">
