--- a/ar/p/مثال-نص/index.html
+++ b/ar/p/مثال-نص/index.html
@@ -4,7 +4,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة">
 <title>مثال نص</title>
 
-<link rel='canonical' href='http://localhost:1313/ar/p/%D9%85%D8%AB%D8%A7%D9%84-%D9%86%D8%B5/'>
+<link rel='canonical' https://persuaderon.github.io//ar/p/%D9%85%D8%AB%D8%A7%D9%84-%D9%86%D8%B5/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="مثال نص">
 <meta property='og:description' content="هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة">
