--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="Example description">
 <title>Example Site</title>
 
-<link rel='canonical' href='http://localhost:1313/en/'>
+<link rel='canonical' https://persuaderon.github.io//en/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="Example Site">
 <meta property='og:description' content="Example description">
