--- a/p/emoji-support/index.html
+++ b/p/emoji-support/index.html
@@ -4,7 +4,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="Guide to emoji usage in Hugo">
 <title>Emoji Support</title>
 
-<link rel='canonical' href='http://localhost:1313/p/emoji-support/'>
+<link rel='canonical' https://persuaderon.github.io//p/emoji-support/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="Emoji Support">
 <meta property='og:description' content="Guide to emoji usage in Hugo">
