--- a/p/placeholder-text/index.html
+++ b/p/placeholder-text/index.html
@@ -4,7 +4,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="Lorem Ipsum Dolor Si Amet">
 <title>Placeholder Text</title>
 
-<link rel='canonical' href='http://localhost:1313/p/placeholder-text/'>
+<link rel='canonical' https://persuaderon.github.io//p/placeholder-text/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="Placeholder Text">
 <meta property='og:description' content="Lorem Ipsum Dolor Si Amet">
