修复评论的跳转问题？

--- a/p/ro01/index.html
+++ b/p/ro01/index.html
@@ -4,7 +4,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="01 怀念是为了不再需要怀念。">
 <title>RoMen归档</title>
 
-<link rel='canonical' https://persuaderon.github.io//p/ro01/'>
+<link rel='canonical' https://persuaderon.github.io/p/ro01/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="RoMen归档">
 <meta property='og:description' content="01 怀念是为了不再需要怀念。">
