--- a/p/guide/index.html
+++ b/p/guide/index.html
@@ -4,7 +4,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="说给未来的我">
 <title>置顶但置不了顶</title>
 
-<link rel='canonical' https://persuaderon.github.io/p/guide/'>
+<link rel='canonical' href='https://persuaderon.github.io/p/guide/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="置顶但置不了顶">
 <meta property='og:description' content="说给未来的我">
