--- a/p/guide2/index.html
+++ b/p/guide2/index.html
@@ -4,7 +4,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="无意义占位">
 <title>To do</title>
 
-<link rel='canonical' https://persuaderon.github.io/p/guide2/'>
+<link rel='canonical' href='https://persuaderon.github.io/p/guide2/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="To do">
 <meta property='og:description' content="无意义占位">
